--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -8,9 +8,9 @@ title = "For Our Veterans"
   isoCode = "en"
   rtl = false
   dateFormat = "2 January 2006"
-  # logo = "img/logo.png"
+   logo = "/img/blowfish_logo_transparent.png"
   # secondaryLogo = "img/secondary-logo.png"
-  # description = "My awesome website"
+   description = "For Our Veterans"
   # copyright = "Copy, _right?_ :thinking_face:"
 
 # [author]
